<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/curved_bg"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/business_title"
        android:fontFamily="@font/quicksandbold"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_outer"
        android:layout_width="350dp"
        android:layout_height="537dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">


        <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_inner"
            android:layout_width="330dp"
            android:layout_height="500dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            card_view:cardBackgroundColor="#4286f4"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="0dp">

            <ImageView
                android:layout_width="3450dp"
                android:layout_height="185dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/curved_bg_img"
                android:src="@drawable/exploretholons" />

            <LinearLayout
                android:layout_width="251dp"
                android:layout_height="280dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:drawableLeft="@drawable/ic_map"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/productsansregular"
                    android:padding="2dp"
                    android:text="@string/address"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:drawableLeft="@drawable/ic_web"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/productsansregular"
                    android:padding="2dp"
                    android:text="@string/website"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/productsansregular"
                    android:padding="2dp"
                    android:text="@string/phone_no"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_timings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:drawableLeft="@drawable/ic_clock"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/productsansregular"
                    android:padding="2dp"
                    android:text="@string/timings"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/getRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:drawableLeft="@drawable/ic_rating"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/productsansregular"
                    android:padding="2dp"
                    android:text="@string/ratings"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:id="@+id/myRatingBar"
                        style="?android:attr/ratingBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="41dp"
                        android:numStars="5" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/quicksandbold"
                    android:padding="3dp"
                    android:text="@string/thank_you"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>